# pnevma

./: .editorconfig  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  SESSION_HANDOFF.md  audit.toml  buildplan-v1.md  buildplan-v2.md  deny.toml  justfile  pnevma.toml  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.codex-test-logs/: run-all-tests.sh  summary.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/pnevma-agents/: Cargo.toml
crates/pnevma-agents/src/: env.rs  error.rs  lib.rs  model.rs  pool.rs  profiles.rs  reconciler.rs  registry.rs  resilience.rs  team_support.rs
crates/pnevma-agents/src/adapters/: claude.rs  codex.rs  codex_v2.rs  mod.rs  process.rs
crates/pnevma-app/: Cargo.toml  build.rs  pnevma.toml  tauri.conf.json
crates/pnevma-app/.pnevma/conventions/: conventions.md
crates/pnevma-app/.pnevma/rules/: project-rules.md
crates/pnevma-app/capabilities/: default.json
crates/pnevma-app/src/: auto_dispatch.rs  command_registry.rs  commands.rs  control.rs  cost_aggregation.rs  lib.rs  main.rs  remote_bridge.rs  state.rs
crates/pnevma-app/src/commands/: agents.rs  analytics.rs  mod.rs  project.rs  ssh.rs  tasks.rs  workflow.rs
crates/pnevma-bridge/: Cargo.toml  build.rs  cbindgen.toml  pnevma-bridge.h
crates/pnevma-bridge/src/: lib.rs
crates/pnevma-commands/: Cargo.toml
crates/pnevma-commands/src/: agent_teams.rs  auth_secret.rs  auto_dispatch.rs  ci_service.rs  command_registry.rs  control.rs  cost_aggregation.rs  event_emitter.rs  github_auth.rs  github_cli.rs  lib.rs  platform.rs  pr_service.rs  remote_bridge.rs  state.rs
crates/pnevma-commands/src/automation/: coordinator.rs  mod.rs  runner.rs  workflow_store.rs
crates/pnevma-commands/src/commands/: agents.rs  analytics.rs  browser_tools.rs  ci.rs  global_agents.rs  global_workflow.rs  harness_catalog.rs  harness_config.rs  intake.rs  mod.rs  plan_tools.rs  pr.rs  project.rs  provider_usage.rs  secrets.rs  ssh.rs  system_resources.rs  tasks.rs  team_tools.rs  telemetry.rs  tracker.rs  tracker_tools.rs  usage_local.rs  workflow.rs
crates/pnevma-commands/src/commands/project/: mod.rs  overview.rs  sessions.rs  settings.rs  workspace.rs
crates/pnevma-commands/src/commands/project/tests/: lifecycle.rs  mod.rs  overview.rs  sessions.rs  settings.rs  workspace.rs
crates/pnevma-commands/tests/: dispatch_lifecycle.rs
crates/pnevma-commands/tests/test_helpers/: mod.rs
crates/pnevma-context/: Cargo.toml
crates/pnevma-context/src/: compiler.rs  discovery.rs  error.rs  lib.rs
crates/pnevma-core/: Cargo.toml
crates/pnevma-core/proptest-regressions/: task.txt  workflow.txt
crates/pnevma-core/src/: agent_discovery.rs  ci.rs  config.rs  error.rs  error_signatures.rs  events.rs  lib.rs  orchestration.rs  pr.rs  protected_actions.rs  stories.rs  task.rs  telemetry.rs  workflow.rs  workflow_contract.rs
crates/pnevma-db/: Cargo.toml
crates/pnevma-db/migrations/: 0001_initial.down.sql  0001_initial.sql  0002_phase1_layout_and_event_filters.down.sql  0002_phase1_layout_and_event_filters.sql  0003_phase3_review_trust.down.sql  0003_phase3_review_trust.sql  0004_phase5_layout_templates.down.sql  0004_phase5_layout_templates.sql  0005_phase5_ops.down.sql  0005_phase5_ops.sql  0006_workflows.down.sql  0006_workflows.sql  0007_ssh_profiles.down.sql  0007_ssh_profiles.sql  0008_cost_aggregation.down.sql  0008_cost_aggregation.sql  0009_error_signatures.down.sql  0009_error_signatures.sql  0010_task_stories.down.sql  0010_task_stories.sql  0011_workflow_engine.down.sql  0011_workflow_engine.sql  0012_agent_profiles.down.sql  0012_agent_profiles.sql  0013_gap_fixes.down.sql  0013_gap_fixes.sql  0014_workflow_step_enhancements.down.sql  0014_workflow_step_enhancements.sql  0015_agent_profile_enhancements.down.sql  0015_agent_profile_enhancements.sql  0016_workflow_loops.down.sql  0016_workflow_loops.sql  0017_automation_runtime.down.sql  0017_automation_runtime.sql  0018_task_external_sources.down.sql  0018_task_external_sources.sql  0019_agent_discovery.down.sql  0019_agent_discovery.sql  0020_costs_fk_to_automation_runs.down.sql  0020_costs_fk_to_automation_runs.sql  (+34 more)
crates/pnevma-db/src/: error.rs  global_store.rs  lib.rs  models.rs  store.rs
crates/pnevma-db/src/store/: admin.rs  agent_hooks.rs  attention_rules.rs  ci.rs  costs.rs  editor_profiles.rs  events.rs  intake.rs  lineage.rs  mod.rs  notifications.rs  ports.rs  projects.rs  pull_requests.rs  review_state.rs  reviews.rs  session_restore.rs  sessions.rs  tasks.rs  telemetry_ops.rs  tests.rs  workflows.rs  workspace_hooks.rs  worktrees.rs
crates/pnevma-git/: Cargo.toml
crates/pnevma-git/src/: error.rs  hooks.rs  lease.rs  lib.rs  service.rs
crates/pnevma-remote/: Cargo.toml
crates/pnevma-remote-helper/: Cargo.toml
crates/pnevma-remote-helper/src/: lib.rs  main.rs  protocol.rs  serve.rs  watcher.rs
crates/pnevma-remote/src/: auth.rs  config.rs  error.rs  lib.rs  server.rs  tailscale.rs  tls.rs
crates/pnevma-remote/src/middleware/: audit.rs  auth_token.rs  cors.rs  mod.rs  rate_limit.rs  security_headers.rs  tailscale_guard.rs
crates/pnevma-remote/src/routes/: api.rs  auth_routes.rs  health.rs  mod.rs  rpc_allowlist.rs  static_files.rs  ws.rs
crates/pnevma-remote/tests/: ws_event_flow.rs
crates/pnevma-session/: Cargo.toml
crates/pnevma-session-protocol/: Cargo.toml
crates/pnevma-session-protocol/src/: frame.rs  lib.rs  types.rs
crates/pnevma-session/src/: error.rs  lib.rs  model.rs  socket_server.rs  supervisor.rs
crates/pnevma-session/src/backend/: local_durable.rs  local_pty.rs  mod.rs  tmux_compat.rs
crates/pnevma-ssh/: Cargo.toml
crates/pnevma-ssh/src/: config_parser.rs  error.rs  key_manager.rs  lib.rs  profile.rs  remote_helper.rs  remote_helper.sh  rpc_client.rs  rpc_pool.rs  rpc_tunnel.rs  tailscale.rs
crates/pnevma-tracker/: Cargo.toml
crates/pnevma-tracker/src/: adapter.rs  error.rs  lib.rs  linear.rs  poll.rs  types.rs
docs/: README.md  architecture-overview.md  (+32 more)
(+1494 files in other folders)
