[workspace]
members = [
  "crates/pnevma-core",
  "crates/pnevma-session",
  "crates/pnevma-agents",
  "crates/pnevma-git",
  "crates/pnevma-context",
  "crates/pnevma-db",
  "crates/pnevma-ssh",
  "crates/pnevma-remote",
  "crates/pnevma-commands",
  "crates/pnevma-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Pnevma Contributors"]
repository = "https://example.com/pnevma"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
portable-pty = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
libc = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }
proptest = "1"
parking_lot = "0.12"
indexmap = "2"
serde_yaml = "0.9"
sha2 = "0.10"
subtle = "2"
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"
governor = "0.8"
dashmap = "6"
rand = "0.8"
hex = "0.4"

[profile.dev]
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
