[package]
name = "pnevma-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
libc.workspace = true
dashmap = { workspace = true }
rand.workspace = true
pnevma-core = { path = "../pnevma-core" }

[dev-dependencies]
tempfile.workspace = true
