[package]
name = "pnevma-commands"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pnevma-core = { path = "../pnevma-core" }
pnevma-db = { path = "../pnevma-db" }
pnevma-session = { path = "../pnevma-session" }
pnevma-agents = { path = "../pnevma-agents" }
pnevma-git = { path = "../pnevma-git" }
pnevma-context = { path = "../pnevma-context" }
pnevma-ssh = { path = "../pnevma-ssh" }
pnevma-remote = { path = "../pnevma-remote" }
async-trait.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
libc.workspace = true
subtle.workspace = true
sqlx.workspace = true
