[package]
name = "pnevma-commands"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pnevma-core = { path = "../pnevma-core" }
pnevma-db = { path = "../pnevma-db" }
pnevma-redaction = { path = "../pnevma-redaction" }
pnevma-session = { path = "../pnevma-session" }
pnevma-agents = { path = "../pnevma-agents" }
pnevma-git = { path = "../pnevma-git" }
pnevma-context = { path = "../pnevma-context" }
pnevma-ssh = { path = "../pnevma-ssh" }
pnevma-remote = { path = "../pnevma-remote" }
pnevma-tracker = { path = "../pnevma-tracker" }
async-trait.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

# macOS-only: pnevma-commands uses Security.framework and other macOS APIs.
# These dependencies are gated to prevent build failures on other platforms.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
libc.workspace = true
subtle.workspace = true
sqlx.workspace = true
tempfile.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
sysinfo.workspace = true
