[package]
name = "pnevma-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
pnevma-core = { path = "../pnevma-core" }

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
uuid.workspace = true
