[package]
name = "pnevma-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true

[dependencies.tempfile]
workspace = true
