[package]
name = "pnevma-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
pnevma-redaction = { path = "../pnevma-redaction" }
