[package]
name = "pnevma-remote-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
