[package]
name = "pnevma-remote"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
governor = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rustls-pki-types = { version = "1", features = ["std"] }
argon2 = "0.5"
sha2 = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = "0.28"
tempfile.workspace = true
