[package]
name = "pnevma-session-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
