[package]
name = "pnevma-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
pnevma-redaction = { path = "../pnevma-redaction" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
